# esp32-rs-car

./: AGENTS.md  README.md  plan.md  test_server.py
android/: .gitignore  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/esp32rc/: ConnectActivity.kt  ControlActivity.kt
android/app/src/main/java/com/esp32rc/model/: MotorCommand.kt
android/app/src/main/java/com/esp32rc/network/: MjpegStreamer.kt  MotorClient.kt
android/app/src/main/java/com/esp32rc/ui/: JoystickView.kt
android/app/src/main/res/drawable/: ic_car.xml
android/app/src/main/res/layout/: activity_connect.xml  activity_control.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
esp32/: .gitignore
esp32/main/: CMakeLists.txt  camera_frame.c  camera_frame.h  http_server.c  idf_component.yml  jpeg_encoder.c  jpeg_encoder.h  led_heartbeat.c  main.c  motor_control.c  motor_control.h
test_server/: requirements.txt
