idf_component_register(
    SRCS
        "main.c"
        "wifi_ap.c"
        "http_server.c"
        "camera_frame.c"
        "jpeg_encoder.c"
        "led_heartbeat.c"
        "motor_control.c"
    INCLUDE_DIRS
        "."
    REQUIRES
        nvs_flash
        esp_wifi
        esp_netif
        esp_http_server
        esp_event
        esp_timer
        esp_driver_gpio
        esp_driver_ledc
)
